<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_control</name>
  <version>0.0.0</version>
  <description>Control logic for Create3 robot</description>
  <maintainer email="viktor.degroote@gmail.com">viktordg</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies for building and running -->
  <depend>rclpy</depend>
  <depend>irobot_create_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
